--- a/overlay/packages/apps/overlays/NoCutoutOverlay/res/values/config.xml
+++ b/overlay/packages/apps/overlays/NoCutoutOverlay/res/values/config.xml
@@ -38,4 +38,8 @@
     <!-- Whether to show battery percentage inside icon -->
     <bool name="config_battery_percentage_show_inside_icon">false</bool>
 
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">6</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">7</integer>
+
 </resources>
