dipper: Configure some overlays
Commit includes the following
config_screenBrightnessDoze
config_dual_LTE_capability

Change-Id: Idd1d686c9a2840737de80b6bdc7402f631026601
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -219,4 +219,12 @@
 
     <!-- Whether auto face unlock is enabled by default -->
     <bool name="config_autoFaceUnlockEnabledByDefault">true</bool>
+
+    <!-- Enable dual LTE capability support-->
+    <bool name="config_dual_LTE_capability">true</bool>
+
+    <!-- Screen brightness used to dim the screen while dozing in a very low power state.
+         May be less than the minimum allowed brightness setting
+         that can be set by the user. -->
+    <integer name="config_screenBrightnessDoze">4</integer>
 </resources>
