dipper: overlay: Set screen off delay to 0
* Fixes flicker issue when entering AOD

Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>
Change-Id: Ia2daab2cf31d3f6406563753d034256118cb0981

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -691,6 +691,9 @@
     <!-- Allow automatic adjusting of the screen brightness while dozing in low power state. -->
     <bool name="config_allowAutoBrightnessWhileDozing">true</bool>
 
+    <!-- Specify custom blanking delay of the display -->
+    <integer name="config_screen_off_delay">0</integer>
+
     <!-- Whether to show battery percentage inside icon -->
     <bool name="config_battery_percentage_show_inside_icon">true</bool>
 
