--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -666,7 +666,21 @@
          appended after the path string to interpret coordinates in dp instead of px units.
          Note that a physical cutout should be configured in pixels for the best results.
          -->
-    <string translatable="false" name="config_mainBuiltInDisplayCutout">M -295,0 L -295,88 L 295,88 L 295,0 Z</string>
+    <string translatable="false" name="config_mainBuiltInDisplayCutout">
+        M295,0
+        295.818519,24.176374
+        C285.295731,69.8076784 267.243762,88 236.156733,88
+        L0,88
+        L-236.156733,88
+        C-267.243762,88 -285.295731,69.8076784 -295.818519,24.176374
+        L-295,0
+        Z
+    </string>
+
+    <!-- Whether the display cutout region of the main built-in display should be forced to
+         black in software (to avoid aliasing or emulate a cutout that is not physically existent).
+         -->
+    <bool name="config_fillMainBuiltInDisplayCutout">true</bool>
 
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">88.0px</dimen>
